@@ -12,6 +12,7 @@ documents those changes that are of interest to users and administrators.
  -- Avoid "running with local config" error when conf server is provided by DNS.
  -- openapi/v0.0.37 - resolve job user name when not sent by slurmctld.
  -- openapi/dbv0.0.37 - Correct OpenAPI specification for diag request.
+ -- Ignore power_down request when node is already powering down.
 
 * Changes in Slurm 21.08.7
 ==========================
